--- a/por-hacer-app/package.json
+++ b/por-hacer-app/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "inquirer": "^7.3.3",
+    "uuid": "^8.3.2",
     "yargs": "^16.2.0"
   }
 }
